Fixed an issue with the related posts section overflowing

--- a/src/scss/modules/_post-viewer.scss
+++ b/src/scss/modules/_post-viewer.scss
@@ -76,6 +76,8 @@ div#c-posts div.parent-children.children-moved {
     & #has-parent-relationship-preview {
         display: grid;
         justify-items: center;
+        max-height: 50vh;
+        @include scrollbars;
     }
 }
 
